--- a/schedule-admin/src/main/webapp/asset/imageupload/demo.html
+++ b/schedule-admin/src/main/webapp/asset/imageupload/demo.html
@@ -1,13 +1,10 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<c:set var="ctx" value="${pageContext.request.contextPath}"/>
-
-
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8"/>
     <title>Simple demo</title>
-    <script type="text/javascript" src="${ctx}/asset/imageupload/scripts/swfobject.js"></script>
-    <script type="text/javascript" src="${ctx}/asset/imageupload/scripts/fullAvatarEditor.js"></script>
+    <script type="text/javascript" src="scripts/swfobject.js"></script>
+    <script type="text/javascript" src="scripts/fullAvatarEditor.js"></script>
 </head>
 <body>
 <div style="width:630px;margin: 0 auto;">
@@ -18,27 +15,29 @@
             本组件需要安装Flash Player后才可使用，请从<a href="http://www.adobe.com/go/getflashplayer">这里</a>下载安装。
         </p>
     </div>
-    <%--<p style="text-align:center">--%>
-    <%--<button type="button" id="upload">自定义上传按钮</button>--%>
-    <%--</p>--%>
+    <p style="text-align:center">
+        <button type="button" id="upload">自定义上传按钮</button>
+    </p>
 </div>
 <script type="text/javascript">
     swfobject.addDomLoadEvent(function () {
+        alert("!");
         var swf = new fullAvatarEditor("swfContainer", {
                     id: 'swf',
-                    upload_url: '${ctx}/member/savePic/${memberId}',
+                    upload_url: 'asp/Upload.asp',
                     src_upload: 2
                 }, function (msg) {
+
                     switch (msg.code) {
                         case 1 :
-//                            alert("页面成功加载了组件！");
+                            alert("页面成功加载了组件！");
                             break;
                         case 2 :
-//                            alert("已成功加载默认指定的图片到编辑面板。");
+                            alert("已成功加载默认指定的图片到编辑面板。");
                             break;
                         case 3 :
                             if (msg.type == 0) {
-//                                alert("摄像头已准备就绪且用户已允许使用。");
+                                alert("摄像头已准备就绪且用户已允许使用。");
                             }
                             else if (msg.type == 1) {
                                 alert("摄像头已准备就绪但用户未允许使用！");
@@ -48,12 +47,20 @@
                             }
                             break;
                         case 5 :
-                            location.replace("${ctx}/member/edit/${memberId}");
+                            if (msg.type == 0) {
+                                if (msg.content.sourceUrl) {
+                                    alert("原图已成功保存至服务器，url为：\n" + msg.content.sourceUrl);
+                                }
+                                alert("头像已成功保存至服务器，url为：\n" + msg.content.avatarUrls.join("\n"));
+                            }
                             break;
                     }
                 }
         );
-
+        document.getElementById("upload").onclick = function () {
+            swf.call("upload");
+        };
     });
 </script>
 </body>
+</html>
